Fix non-main window drag bar z-index.

--- a/kanmail/client/styles/header.less
+++ b/kanmail/client/styles/header.less
@@ -136,7 +136,7 @@ section.Darwin header h1#logo {
 
 div#drag-bar {
     position: fixed;
-    z-index: 98;
+    z-index: 999999;
     top: 0;
     left: 0;
     right: 0;
